--- a/code2/jsw14-todoList/index.html
+++ b/code2/jsw14-todoList/index.html
@@ -11,15 +11,13 @@
 <body>
     <div>
         <div>
-            <form>
-                <input type="text" placeholder="todo item">
+            <form id="addTodoForm">
+                <input type="text" name="item" placeholder="todo item">
                 <button>GO</button>
             </form>
         </div>
         <div>
-            <ul>
-                <li>ir as compras</li>
-                <li>Jogar Spider-Man 2 PS5</li>
+            <ul id="todoList">
             </ul>
         </div>
     </div>
