--- a/code2/jsw17-formData/index.html
+++ b/code2/jsw17-formData/index.html
@@ -25,48 +25,11 @@
                 <th></th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>lalala@lalala.com</td>
-                <td>lala</td>
-                <td>a rua do lalalala</td>
-                <td>Obtober 13th...</td>
-                <td><button>❌</button></td>
-            </tr>
-            <tr>
-                <td>lalala@lalala.com</td>
-                <td>lala</td>
-                <td>a rua do lalalala</td>
-                <td>Obtober 13th...</td>
-                <td><button>❌</button></td>
-            </tr>
+        <tbody id="usersTableBody">
         </tbody>
     </table>
 
-    <script>
-        const data = [
-            {
-                name: "Helder",
-                email: "phelder@gmail.com",
-                address: "Porto",
-                createdAt: "descubram..."
-            },
-            {
-                name: "Helder",
-                email: "phelder@gmail.com",
-                address: "Porto",
-                createdAt: "descubram..."
-            },
-            {
-                name: "Helder",
-                email: "phelder@gmail.com",
-                address: "Porto",
-                createdAt: "descubram..."
-            },
-        ]
-
-
-    </script>
+    <script type="module" src="main.js"></script>
 </body>
 
 </html>
