--- a/code2/jsw17-formData/index.html
+++ b/code2/jsw17-formData/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-    <form>
-        <input type="email" placeholder="email"><br>
-        <input type="text" placeholder="name"><br>
-        <textarea cols="30" rows="10" placeholder="address"></textarea><br>
+    <form id="userForm">
+        <input name="email" type="email" placeholder="email"><br>
+        <input name="name" type="text" placeholder="name"><br>
+        <textarea name="address" cols="30" rows="10" placeholder="address"></textarea><br>
         <button>SUBMIT</button>
     </form>
 
